Agregado copyright en index

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
         <img src="image.jpg" alt="" width="50%">
    </body>
    <footer>
-
+      <p>Clase de ADSO - Derechos Reservados &copy; 2024</p>
    </footer>
 </html>
