--- a/index.html
+++ b/index.html
@@ -6,66 +6,36 @@
       <title>Mi página web</title>
    </head>
    <body>
-      <nav>
-         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li>Información</li>
-            <li>Blog</li>
-            <li>Contáctenos</li>
-         </ul>
-      </nav>
+      <h2 class="center">Ejemplo de CSS con Flexbox</h2>
+      <div class="flex-content">
+         <div class="boxsize">
+            <img src="image.jpg" width="100%" alt="" srcset="">
+         </div>
+         <div class="boxsize">B</div>
+         <div class="boxsize">C</div>
+         <div class="boxsize">D</div>
+         <div class="boxsize">E</div>
+         <div class="boxsize">F</div>
+         <div class="boxsize">G</div>
+         <div class="boxsize">H</div>
+         <div class="boxsize">I</div>
+         <div class="boxsize">J</div>
+         <div class="boxsize">K</div>
+         <div class="boxsize">L</div>
+      </div>
+      <div class="flex-table">
          <table>
-            <tr>
-               <th>Fecha</th>
-               <th>Ciudad</th>
-            </tr>
-            <tr>
-               <td>2024-03-11</td>
-               <td>Bogotá D.C.</td>
-            </tr>
-            <tr>
-               <td>2025-04-13</td>
-               <td>Santiago de Chile</td>
-            </tr>
-            <tr>
-               <td>2024-12-13</td>
-               <td>Cartagena</td>
-            </tr>
+            <thead>
+               <tr>
+                  <th>Elemento 1</th>
+                  <th>Elemento 2</th>
+                  <th>Elemento 3</th>
+                  <th>Elemento 4</th>
+               </tr>
+            </thead>
          </table>
-         <hr>
-         <form action="" method="get">
-            <label for="name">Nombre</label>
-            <input type="text" name="" id="">
-            <label for="email">Correo electrónico</label>
-            <input type="email" name="" id="">
-            <input type="submit" name="" id="">
-         </form>
-
-        <h1 id="enc1">Hola, mundo</h1>
-        <h2 id="enc2">Hola, mundo</h2>
-        <h3 id="enc3">Hola, mundo</h3>
-        <h4 id="enc4">Hola, mundo</h4>
-        <h5 id="enc5">Hola, mundo</h5>
-        <h6 id="enc6">Hola, mundo</h6>
-        <p class="arriba">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="abajo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <label for="name">Escriba su nombre</label>
-        <input type="text"><br>
-        <input type="number" min="18" max="120"><br>
-        <input type="date"><br>
-        <input type="datetime-local"><br>
-        <input type="file"><br>
-        <input type="submit"><br>
-        <input type="password"><br>
-        <input type="color"><br>
-        <input type="email"><br>
-        <input type="hidden"><br>
-        <input type="month"><br>
-        <input type="search"><br>
-        <input type="radio"><br>
-        <input type="checkbox"><br>
-        <img src="image.jpg" alt="" width="50%">
-   </body>
+      </div>
+   </body>      
    <footer>
       <p>Clase de ADSO - Derechos Reservados &copy; 2024</p>
    </footer>
