Implementacipon de Bootstrap 5.3

--- a/home.html
+++ b/home.html
@@ -23,3 +23,46 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="style.css">
+      <title>Mi página web</title>
+   </head>
+   <body>
+      <h2 class="center">Ejemplo de CSS con Flexbox</h2>
+      <div class="flex-content">
+         <div class="boxsize">
+            <img src="image.jpg" width="100%" alt="" srcset="">
+         </div>
+         <div class="boxsize">B</div>
+         <div class="boxsize">C</div>
+         <div class="boxsize">D</div>
+         <div class="boxsize">E</div>
+         <div class="boxsize">F</div>
+         <div class="boxsize">G</div>
+         <div class="boxsize">H</div>
+         <div class="boxsize">I</div>
+         <div class="boxsize">J</div>
+         <div class="boxsize">K</div>
+         <div class="boxsize">L</div>
+      </div>
+      <div class="flex-table">
+         <table>
+            <thead>
+               <tr>
+                  <th>Elemento 1</th>
+                  <th>Elemento 2</th>
+                  <th>Elemento 3</th>
+                  <th>Elemento 4</th>
+               </tr>
+            </thead>
+         </table>
+      </div>
+   </body>      
+   <footer>
+      <p>Clase de ADSO - Derechos Reservados &copy; 2024</p>
+   </footer>
+</html>
