--- a/index.html
+++ b/index.html
@@ -1,42 +1,28 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="style.css">
-      <title>Mi página web</title>
-   </head>
-   <body>
-      <h2 class="center">Ejemplo de CSS con Flexbox</h2>
-      <div class="flex-content">
-         <div class="boxsize">
-            <img src="image.jpg" width="100%" alt="" srcset="">
+<html lang="es">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   <link rel="stylesheet" href="style.css">
+   <title>Práctica con Bootstrap 5</title>
+</head>
+<body>
+   <div class="row">
+     <div class="estilologin">
+      <form class="" action="" method="post">
+         <h3 class="text-center morado">Ingresar al sistema</h3>
+         <div class="form-group espacio">
+           <input type="email" name="email" class="form-control" id="" placeholder="Correo electrónico">
          </div>
-         <div class="boxsize">B</div>
-         <div class="boxsize">C</div>
-         <div class="boxsize">D</div>
-         <div class="boxsize">E</div>
-         <div class="boxsize">F</div>
-         <div class="boxsize">G</div>
-         <div class="boxsize">H</div>
-         <div class="boxsize">I</div>
-         <div class="boxsize">J</div>
-         <div class="boxsize">K</div>
-         <div class="boxsize">L</div>
-      </div>
-      <div class="flex-table">
-         <table>
-            <thead>
-               <tr>
-                  <th>Elemento 1</th>
-                  <th>Elemento 2</th>
-                  <th>Elemento 3</th>
-                  <th>Elemento 4</th>
-               </tr>
-            </thead>
-         </table>
-      </div>
-   </body>      
-   <footer>
-      <p>Clase de ADSO - Derechos Reservados &copy; 2024</p>
-   </footer>
+         <div class="form-group espacio">
+            <input type="password" name="password" class="form-control" id="" placeholder="Contraseña">
+         </div>
+         <div class="form-group espacio">
+            <button class="btn btn-success" type="submit">Iniciar sesión</button>
+         </div>
+      </form>
+     </div>
+   </div>
+</body>
 </html>
